; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_cfq-iosched.c_cfq_merge.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_cfq-iosched.c_cfq_merge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.request_queue = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.cfq_data* }
%struct.cfq_data = type { i32 }
%struct.request = type { i32 }
%struct.bio = type { i32 }

@ELEVATOR_FRONT_MERGE = common dso_local global i32 0, align 4
@ELEVATOR_NO_MERGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.request_queue*, %struct.request**, %struct.bio*)* @cfq_merge to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cfq_merge(%struct.request_queue* %0, %struct.request** %1, %struct.bio* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.request_queue*, align 8
  %6 = alloca %struct.request**, align 8
  %7 = alloca %struct.bio*, align 8
  %8 = alloca %struct.cfq_data*, align 8
  %9 = alloca %struct.request*, align 8
  store %struct.request_queue* %0, %struct.request_queue** %5, align 8
  store %struct.request** %1, %struct.request*** %6, align 8
  store %struct.bio* %2, %struct.bio** %7, align 8
  %10 = load %struct.request_queue*, %struct.request_queue** %5, align 8
  %11 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load %struct.cfq_data*, %struct.cfq_data** %13, align 8
  store %struct.cfq_data* %14, %struct.cfq_data** %8, align 8
  %15 = load %struct.cfq_data*, %struct.cfq_data** %8, align 8
  %16 = load %struct.bio*, %struct.bio** %7, align 8
  %17 = call %struct.request* @cfq_find_rq_fmerge(%struct.cfq_data* %15, %struct.bio* %16)
  store %struct.request* %17, %struct.request** %9, align 8
  %18 = load %struct.request*, %struct.request** %9, align 8
  %19 = icmp ne %struct.request* %18, null
  br i1 %19, label %20, label %29

20:                                               ; preds = %3
  %21 = load %struct.request*, %struct.request** %9, align 8
  %22 = load %struct.bio*, %struct.bio** %7, align 8
  %23 = call i64 @elv_rq_merge_ok(%struct.request* %21, %struct.bio* %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %20
  %26 = load %struct.request*, %struct.request** %9, align 8
  %27 = load %struct.request**, %struct.request*** %6, align 8
  store %struct.request* %26, %struct.request** %27, align 8
  %28 = load i32, i32* @ELEVATOR_FRONT_MERGE, align 4
  store i32 %28, i32* %4, align 4
  br label %31

29:                                               ; preds = %20, %3
  %30 = load i32, i32* @ELEVATOR_NO_MERGE, align 4
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %29, %25
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local %struct.request* @cfq_find_rq_fmerge(%struct.cfq_data*, %struct.bio*) #1

declare dso_local i64 @elv_rq_merge_ok(%struct.request*, %struct.bio*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
